--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -18,5 +18,21 @@
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-netty</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.jknack</groupId>
+      <artifactId>handlebars</artifactId>
+    </dependency>
   </dependencies>
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <excludes><exclude>**/*.hbs</exclude></excludes>
+      </resource>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes><include>**/*.hbs</include></includes>
+      </resource>
+    </resources>
+  </build>
 </project>
