--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>com.github.jknack</groupId>
+        <artifactId>handlebars</artifactId>
+        <version>1.1.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
