--- a/oasis-model/pom.xml
+++ b/oasis-model/pom.xml
@@ -9,5 +9,12 @@
   </parent>
 
   <artifactId>oasis-model</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.wordnik</groupId>
+      <artifactId>swagger-core_2.10</artifactId>
+    </dependency>
+  </dependencies>
 </project>
 
