--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-    <resteasy-version>3.0.4.Final</resteasy-version>
   </properties>
 
   <dependencyManagement>
@@ -23,7 +21,7 @@
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>resteasy-bom</artifactId>
-        <version>${resteasy-version}</version>
+        <version>3.0.4.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -31,6 +29,18 @@
         <groupId>com.github.jknack</groupId>
         <artifactId>handlebars</artifactId>
         <version>1.1.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.wordnik</groupId>
+        <artifactId>swagger-project_2.10</artifactId>
+        <version>1.3.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
