--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -24,6 +24,10 @@
       <artifactId>resteasy-netty</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-jackson-provider</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github.jknack</groupId>
       <artifactId>handlebars</artifactId>
     </dependency>
