Configuration du plugin pour sonar
Change-Id: I5f2b30a2e9a7e47895d611f9cc78a1649d0ead48

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <target>7</target>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.sonar</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.7</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
