--- a/oasis-model/pom.xml
+++ b/oasis-model/pom.xml
@@ -13,7 +13,7 @@
   <dependencies>
     <dependency>
       <groupId>com.wordnik</groupId>
-      <artifactId>swagger-core_2.10</artifactId>
+      <artifactId>swagger-annotations_2.10</artifactId>
     </dependency>
   </dependencies>
 </project>
