--- a/oasis-model/pom.xml
+++ b/oasis-model/pom.xml
@@ -15,6 +15,10 @@
       <groupId>com.wordnik</groupId>
       <artifactId>swagger-annotations_2.10</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
   </dependencies>
 </project>
 
