--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.2.3</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
