Resteasy-Guice integration.
Constructor injection is not supported, only member injection is performed,
after the resource or provider has been instantiated by Resteasy.

Change-Id: Ibfbaa06d9e5f0a90db991b17f1e81b32a174c877

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         <version>15.0</version>
       </dependency>
       <dependency>
+        <groupId>com.google.inject</groupId>
+        <artifactId>guice</artifactId>
+        <version>4.0-beta</version>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>resteasy-bom</artifactId>
         <version>3.0.4.Final</version>
