--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,20 @@
     <swagger.version>1.3.0</swagger.version>
   </properties>
 
+  <scm>
+    <connection>scm:git:https://github.com/pole-numerique/oasis.git</connection>
+    <developerConnection>scm:git:ssh://gerrit:29418/pole-numerique/oasis</developerConnection>
+    <url>https://github.com/pole-numerique/oasis</url>
+  </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <url>http://nexus/content/repositories/releases/</url>
+      <name>Releases</name>
+    </repository>
+  </distributionManagement>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
