Log using Log4j 2 rather than SLF4J Simple (inherited from Resteasy)
Change-Id: I669616bb5ee03e2dce8180aaedc918ff47816c7a

--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -37,6 +37,12 @@
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-netty</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
@@ -54,6 +60,11 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
   <build>
