--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,19 @@
         <artifactId>jackson-annotations</artifactId>
         <version>2.2.3</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>2.0-beta9</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <!-- SLF4J major.minor version must match the one needed by log4j-slf4j-impl -->
+        <version>1.6.6</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
