--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -62,6 +62,10 @@
       <artifactId>servlet-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>args4j</groupId>
+      <artifactId>args4j</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>runtime</scope>
