--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
         <!-- SLF4J major.minor version must match the one needed by log4j-slf4j-impl -->
         <version>1.6.6</version>
       </dependency>
+      <dependency>
+        <groupId>args4j</groupId>
+        <artifactId>args4j</artifactId>
+        <version>2.0.25</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
