Fix default debian service config
Change-Id: I64c755c0edf451a716cfe5d54fc64a70f44ad8ab

--- a/oasis-dist/pom.xml
+++ b/oasis-dist/pom.xml
@@ -85,6 +85,8 @@
                     <type>perm</type>
                     <prefix>${oasis.home}</prefix>
                     <filemode>755</filemode>
+                    <user>${oasis.user}</user>
+                    <group>${oasis.group}</group>
                   </mapper>
                 </data>
                 <data>
