--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -66,6 +66,10 @@
       <artifactId>args4j</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.typesafe</groupId>
+      <artifactId>config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>runtime</scope>
