--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
         <artifactId>args4j</artifactId>
         <version>2.0.25</version>
       </dependency>
+      <dependency>
+        <groupId>com.typesafe</groupId>
+        <artifactId>config</artifactId>
+        <version>1.0.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
