Add an audit API.
Change-Id: Ib1c50707a52e72f09c8079fc1ae35c842985baaf

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -1,2 +1,8 @@
-oasis.netty.port=8080
+oasis = {
+  netty.port=8080
+  audit = {
+    disabled=false
+    service=oasis.audit.NoopAuditService
+  }
+}
 swagger.api.version=1.0
