Add a log4j2-fluentd module for logging audit events into Fluentd.
Change-Id: I191c8f62540191170235760d1c0ca65a76143699

--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
     <module>oasis-webapp</module>
     <module>oasis-dist</module>
     <module>log4j2-cube</module>
+    <module>log4j2-fluentd</module>
   </modules>
 
   <profiles>
