--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -20,6 +20,11 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>com.atolcd.logging.log4j</groupId>
+      <artifactId>log4j2-fluentd</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
