--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -4,9 +4,13 @@ oasis = {
     disabled=false
     service=oasis.audit.log4j.Log4JAuditService
     log4j = {
-      supplier="oasis.audit.log4j.cube.CubeLog4JSupplier"
+      supplier="oasis.audit.log4j.fluentd.FluentdLog4JSupplier"
       cube = {
         url="http://localhost:1080"
+      }
+      fluentd = {
+        url="http://localhost:8888"
+        tag="oasis.audit"
       }
     }
   }
