Add a log4j2-cube module for logging audit events into Cube.
Change-Id: I5743cff19dee370b1af788d749aed09cafc406c0

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -2,7 +2,13 @@ oasis = {
   netty.port=8080
   audit = {
     disabled=false
-    service=oasis.audit.NoopAuditService
+    service=oasis.audit.log4j.Log4JAuditService
+    log4j = {
+      supplier="oasis.audit.log4j.cube.CubeLog4JSupplier"
+      cube = {
+        url="http://localhost:1080"
+      }
+    }
   }
 }
 swagger.api.version=1.0
