--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
     <module>oasis-model</module>
     <module>oasis-webapp</module>
     <module>oasis-dist</module>
+    <module>log4j2-cube</module>
   </modules>
 
   <profiles>
