--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -15,6 +15,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.atolcd.logging.log4j</groupId>
+      <artifactId>log4j2-cube</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
@@ -77,7 +82,6 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <scope>runtime</scope>
     </dependency>
     <!-- Required by log4j2 async loggers -->
     <dependency>
