--- a/log4j2-fluentd/pom.xml
+++ b/log4j2-fluentd/pom.xml
@@ -47,4 +47,24 @@
       <version>${resteasy.version}</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.1</version>
+          <configuration>
+            <source>7</source>
+            <target>7</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.sonar</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.7</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
