--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -1,17 +1,15 @@
-oasis = {
-  netty.port=8080
-  audit = {
+oasis={
+  http={
+    port=8080
+  }
+  audit={
     disabled=false
-    service=oasis.audit.log4j.Log4JAuditService
-    log4j = {
-      supplier="oasis.audit.log4j.fluentd.FluentdLog4JSupplier"
-      cube = {
-        url="http://localhost:1080"
-      }
-      fluentd = {
-        url="http://localhost:8888"
-        tag="oasis.audit"
-      }
+    fluentd={
+      url="http://localhost:8888"
+      tag="oasis.audit"
+    }
+    cube={
+      url="http://localhost:1080"
     }
   }
 }
