Update to reasteasy 3.0.5.Final and netty4
Change-Id: I60bc0c265ab3a6dd0a56ddbf2b87ad88c35dd077

--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,14 @@
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>resteasy-bom</artifactId>
-        <version>3.0.4.Final</version>
+        <version>3.0.5.Final</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>4.0.12.Final</version>
       </dependency>
       <dependency>
         <groupId>com.github.jknack</groupId>
