--- a/puppet/vagrant/Vagrantfile
+++ b/puppet/vagrant/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant::Config.run do |config|
   # Boot with a GUI so you can see the screen. (Default is headless)
   #config.vm.boot_mode = :gui
 
-  config.vm.host_name = "oasis-demo.atolcd.priv"
+  config.vm.host_name = "oasis-box.atolcd.priv"
 
   # Assign this VM to a host-only network IP, allowing you to access it
   # via the IP. Host-only networks can talk to the host machine as well as
@@ -31,17 +31,20 @@ Vagrant::Config.run do |config|
 
   # Forward a port from the guest to the host, which allows for outside
   # computers to access the VM, whereas host only networking does not.
-  config.vm.forward_port 8080, 8080
+  config.vm.forward_port 8080, 8080 # Oasis
+  config.vm.forward_port 9200, 9200 # ElasticSearch port
+  config.vm.forward_port 9880, 9880 # Fluentd in_http port
 
   # Share an additional folder to the guest VM. The first argument is
   # an identifier, the second is the path on the guest to mount the
   # folder, and the third is the path on the host to the actual folder.
   config.vm.share_folder "v-project-root", "/project/", "../../"
+  config.vm.share_folder "v-apt-cache", "/var/cache/apt/archives", "~/.vagrant.d/cache/apt"
 
   config.vm.provision :puppet do |puppet|
     puppet.manifests_path = "../manifests"
     puppet.manifest_file  = "oasis-vagrant.pp"
-    puppet.module_path    = "../modules"
+    puppet.module_path    = "../modules","../project_modules"
   end
 
   config.vm.customize ["modifyvm", :id, "--memory", "1024"]
