--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -12,5 +12,10 @@ oasis={
       url="http://localhost:1080"
     }
   }
+  kibana={
+    elasticsearch={
+      url="http://localhost:9200"
+    }
+  }
 }
 swagger.api.version=1.0
