--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -12,5 +12,8 @@ oasis={
       url="http://localhost:1080"
     }
   }
+  mongo={
+    uri="mongodb://localhost:27017/oasis"
+  }
 }
 swagger.api.version=1.0
