--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -98,6 +98,22 @@
       <artifactId>disruptor</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jongo</groupId>
+      <artifactId>jongo</artifactId>
+      <version>0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>2.11.3</version>
+    </dependency>
+    <!-- Update Jongo dependency https://github.com/bguerout/jongo/issues/136 -->
+    <dependency>
+      <groupId>de.undercouch</groupId>
+      <artifactId>bson4jackson</artifactId>
+      <version>2.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
