--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -46,17 +46,13 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-netty4</artifactId>
+      <artifactId>resteasy-netty</artifactId>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-simple</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
