Send auditlog events to logstash
Change-Id: I2d929dd7d62033f712bc4f3134aca576dc3cf927

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -11,6 +11,10 @@ oasis={
     cube={
       url="http://localhost:1080"
     }
+    logstash={
+      host="localhost"
+      port="11111"
+    }
   }
   mongo={
     uri="mongodb://localhost:27017/oasis"
