Log4j2 Logstash appender
Change-Id: I98ddc53c9e537431ebbc7eb2653515f6be43fea5

--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
     <module>oasis-dist</module>
     <module>log4j2-cube</module>
     <module>log4j2-fluentd</module>
+    <module>log4j2-logstash</module>
   </modules>
 
   <profiles>
