Use Key-Pair for OpenID Connect IdToken
Change-Id: I951c3a8d58f5308c5d939257976695c65c908a54

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -23,6 +23,10 @@ oasis={
   openid-connect = {
     private-key-path=private.key
     public-key-path=public.key
+    id-token-expiration-seconds = 600
+  }
+  oauth = {
+    access-token-expiration-seconds = 3600
   }
 }
 swagger.api.version=1.0
