Loading/Generating key-pair for OpenID Connect.
Change-Id: If31ad9173ac3b596011806f1b8e910bef9e94f1f

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -20,5 +20,9 @@ oasis={
       url="http://localhost:9200"
     }
   }
+  openid-connect = {
+    private-key-path=private.key
+    public-key-path=public.key
+  }
 }
 swagger.api.version=1.0
