--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -2,11 +2,11 @@ oasis={
   http={
     port=8080
   }
-  audit={
+  auditlog={
     disabled=false
     fluentd={
       url="http://localhost:9880"
-      tag="oasis.audit"
+      tag="oasis.auditlog"
     }
     cube={
       url="http://localhost:1080"
