--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -123,6 +123,10 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <resources>
