--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
         <version>4.11</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.3</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
