--- a/log4j2-cube/pom.xml
+++ b/log4j2-cube/pom.xml
@@ -4,9 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>fr.pole-numerique.oasis</groupId>
+    <artifactId>oasis-parent</artifactId>
+    <version>0.3.0-SNAPSHOT</version>
+  </parent>
+
   <groupId>com.atolcd.logging.log4j</groupId>
   <artifactId>log4j2-cube</artifactId>
-  <version>1.0-SNAPSHOT</version>
 
   <properties>
     <log4j.version>2.0-beta9</log4j.version>
