--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -17,17 +17,17 @@
     <dependency>
       <groupId>com.atolcd.logging.log4j</groupId>
       <artifactId>log4j2-cube</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>com.atolcd.logging.log4j</groupId>
       <artifactId>log4j2-fluentd</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>com.atolcd.logging.log4j</groupId>
       <artifactId>log4j2-logstash</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
