--- a/oasis-model/pom.xml
+++ b/oasis-model/pom.xml
@@ -22,6 +22,10 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-joda</artifactId>
+    </dependency>
   </dependencies>
 </project>
 
