--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -159,6 +160,7 @@
     <module>oasis-model</module>
     <module>oasis-webapp</module>
     <module>oasis-dist</module>
+    <module>oasis-puppet</module>
     <module>log4j2-cube</module>
     <module>log4j2-fluentd</module>
     <module>log4j2-logstash</module>
