Add @Nonnull on {Cube|Fluentd|Logstash}Manager creation method
Change-Id: I9f90b71b6ce5e8cab6ba900f5154256ec1467475

--- a/log4j2-fluentd/pom.xml
+++ b/log4j2-fluentd/pom.xml
@@ -44,6 +44,10 @@
       <artifactId>resteasy-client</artifactId>
       <version>${resteasy.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
