--- a/log4j2-logstash/pom.xml
+++ b/log4j2-logstash/pom.xml
@@ -27,6 +27,10 @@
       <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
