--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -106,7 +106,7 @@
     <dependency>
       <groupId>org.jongo</groupId>
       <artifactId>jongo</artifactId>
-      <version>0.4</version>
+      <version>1.0-atolcd-patched</version>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
@@ -117,7 +117,7 @@
     <dependency>
       <groupId>de.undercouch</groupId>
       <artifactId>bson4jackson</artifactId>
-      <version>2.2.0</version>
+      <version>2.2.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
