--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -10,6 +10,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+    </dependency>
+    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>oasis-model</artifactId>
       <version>${project.version}</version>
