--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -110,18 +110,15 @@
     <dependency>
       <groupId>org.jongo</groupId>
       <artifactId>jongo</artifactId>
-      <version>1.0-atolcd-patched</version>
+    </dependency>
+    <!-- org.jongo:jongo:1.0-atolcd-patched fails to declare the dependency -->
+    <dependency>
+      <groupId>de.undercouch</groupId>
+      <artifactId>bson4jackson</artifactId>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
-      <version>2.11.3</version>
-    </dependency>
-    <!-- Update Jongo dependency https://github.com/bguerout/jongo/issues/136 -->
-    <dependency>
-      <groupId>de.undercouch</groupId>
-      <artifactId>bson4jackson</artifactId>
-      <version>2.2.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
