--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,11 @@
                   <artifactId>plexus-compiler-javac</artifactId>
                   <version>2.3</version>
                 </dependency>
+                <dependency>
+                  <groupId>com.google.errorprone</groupId>
+                  <artifactId>error_prone_core</artifactId>
+                  <version>1.0.8</version>
+                </dependency>
               </dependencies>
             </plugin>
           </plugins>
