--- a/oasis-model/pom.xml
+++ b/oasis-model/pom.xml
@@ -16,7 +16,7 @@
     </dependency>
     <dependency>
       <groupId>com.wordnik</groupId>
-      <artifactId>swagger-annotations_2.10</artifactId>
+      <artifactId>swagger-annotations</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
