--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <jackson.version>2.2.3</jackson.version>
-    <swagger.version>1.3.0</swagger.version>
+    <jackson.version>2.3.0</jackson.version>
+    <swagger.version>1.3.1</swagger.version>
   </properties>
 
   <scm>
@@ -33,12 +33,12 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>15.0</version>
+        <version>16.0-rc1</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
         <artifactId>jsr305</artifactId>
-        <version>2.0.2</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>com.google.oauth-client</groupId>
@@ -74,18 +74,23 @@
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>resteasy-bom</artifactId>
-        <version>3.0.5.Final</version>
+        <version>3.0.6.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty</artifactId>
+        <version>3.9.0.Final</version>
+      </dependency>
+      <dependency>
         <groupId>com.github.jknack</groupId>
         <artifactId>handlebars</artifactId>
-        <version>1.1.2</version>
+        <version>1.2.1</version>
       </dependency>
       <dependency>
         <groupId>com.wordnik</groupId>
-        <artifactId>swagger-annotations_2.10</artifactId>
+        <artifactId>swagger-annotations</artifactId>
         <version>${swagger.version}</version>
       </dependency>
       <dependency>
@@ -136,7 +141,7 @@
       <dependency>
         <groupId>args4j</groupId>
         <artifactId>args4j</artifactId>
-        <version>2.0.25</version>
+        <version>2.0.26</version>
       </dependency>
       <dependency>
         <groupId>com.typesafe</groupId>
@@ -175,7 +180,7 @@
         <plugin>
           <groupId>org.vafer</groupId>
           <artifactId>jdeb</artifactId>
-          <version>1.0</version>
+          <version>1.0.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
