--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,8 @@
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
-        <artifactId>netty</artifactId>
-        <version>3.9.0.Final</version>
+        <artifactId>netty-all</artifactId>
+        <version>4.0.14.Final</version>
       </dependency>
       <dependency>
         <groupId>com.github.jknack</groupId>
