Use duration notation of HOCON in config files and Joda Duration in setting's class
Change-Id: I085fd8f01c416645ccf63143037d62b405932eed

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -27,10 +27,10 @@ oasis={
   openid-connect = {
     private-key-path=private.key
     public-key-path=public.key
-    id-token-expiration-seconds = 600
+    id-token-duration = 10 minutes
   }
   oauth = {
-    access-token-expiration-seconds = 3600
+    access-token-duration = 1 hour
   }
 }
 swagger.api.version=1.0
