Update to a Jongo "early" version
That Jongo version contains the fixes for both bguerout/jongo#174 and
bguerout/jongo#182 so we no longer need our patched 1.0 version and
byte array workaround.

Change-Id: I6e2f81ac4d61c69bb1a2f4f026e7a7da1faa4bfd

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,19 @@
     </repository>
   </distributionManagement>
 
+  <repositories>
+    <repository>
+      <id>cloudbees-jongo-early-release</id>
+      <url>http://repository-jongo.forge.cloudbees.com/release</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -63,9 +76,8 @@
       <dependency>
         <groupId>org.jongo</groupId>
         <artifactId>jongo</artifactId>
-        <version>1.0-atolcd-patched</version>
+        <version>1.1-early-20140125-0533</version>
       </dependency>
-      <!-- org.jongo:jongo:1.0-atolcd-patched fails to declare the dependency -->
       <dependency>
         <groupId>de.undercouch</groupId>
         <artifactId>bson4jackson</artifactId>
