Introduce strict referer validation
- Validate with the origin and if not present validate with the referer
- Validate the origin of the user in the login page

Change-Id: Ie4d7f0c070e4400638d42708fe683acee1b72d02

--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -136,6 +136,10 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.mola.galimatias</groupId>
+      <artifactId>galimatias</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <resources>
