Replace ResteasyJackson2Provider with JacksonJsonProvider
resteasy-jaxrs-json-provider uses an "internal" API of jackson-jaxrs-base that
has changed between Jackson 2.2 (used by Resteasy) and 2.3 (used by Jongo).
ResteasyJackson2Provider fixed a few things from Jackson 2.2.1 that have
since been fixed upstream. It also added @NoJackson, that we don't use.

Change-Id: I2651f5dd9dacfa130a967b8191f697a162edc65b

--- a/log4j2-cube/pom.xml
+++ b/log4j2-cube/pom.xml
@@ -15,6 +15,7 @@
     <log4j.version>2.0-beta9</log4j.version>
     <resteasy.version>3.0.6.Final</resteasy.version>
     <guava.version>16.0</guava.version>
+    <jackson.version>2.3.1</jackson.version>
   </properties>
 
   <dependencies>
@@ -34,9 +35,10 @@
       <version>${guava.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jackson2-provider</artifactId>
-      <version>${resteasy.version}</version>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>${jackson.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
