--- a/log4j2-fluentd/pom.xml
+++ b/log4j2-fluentd/pom.xml
@@ -16,6 +16,7 @@
     <resteasy.version>3.0.6.Final</resteasy.version>
     <guava.version>16.0</guava.version>
     <fluentd.version>0.2.11</fluentd.version>
+    <jackson.version>2.3.1</jackson.version>
   </properties>
 
   <dependencies>
@@ -35,9 +36,10 @@
       <version>${guava.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jackson2-provider</artifactId>
-      <version>${resteasy.version}</version>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>${jackson.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
