Make authorization code and refresh token expiration configurable
Change-Id: Ib6afec4c1f0b378ca1f78936a49dfaf1695083a1

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -34,7 +34,9 @@ oasis={
     disable-redirect-uri-validation = false
   }
   oauth = {
+    authorization-code-duration = 1 minute
     access-token-duration = 1 hour
+    refresh-token-duration = 18250 days # 50 years
   }
 }
 swagger.api.version=1.0
