Change version to 0.5-SNAPSHOT.
Change-Id: Ibfb323b5def74e9d9b6a7648969eb7eb760b9610

--- a/log4j2-cube/pom.xml
+++ b/log4j2-cube/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>fr.pole-numerique.oasis</groupId>
     <artifactId>oasis-parent</artifactId>
-    <version>0.5.2</version>
+    <version>0.5-SNAPSHOT</version>
   </parent>
 
   <groupId>com.atolcd.logging.log4j</groupId>
