--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>fr.pole-numerique.oasis</groupId>
     <artifactId>oasis-parent</artifactId>
-    <version>0.5.2</version>
+    <version>0.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>oasis-webapp</artifactId>
