Browser session management
Change-Id: I3708ebca18b696cbb826a0696a904642bd99d9fd

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -24,6 +24,9 @@ oasis={
       url="http://localhost:9200"
     }
   }
+  session = {
+    max-idle-timeout = 6 hours
+  }
   openid-connect = {
     private-key-path=private.key
     public-key-path=public.key
