--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -159,6 +159,10 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-joda-time</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.caliper</groupId>
+      <artifactId>caliper</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <resources>
