--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
         <version>1.1.0</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>com.google.caliper</groupId>
+        <artifactId>caliper</artifactId>
+        <version>1.0-beta-1</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
