Update dependencies to their latest version
Also adds explicit guice-assistedinject dependencyManagement as its
referenced by Jukito, albeit only for its @Assisted annotation so version
doesn't really matter here.

Change-Id: Ic0e5b6ea5cc5b3ff42428cd8b4cf23f2ff6342d6

--- a/log4j2-cube/pom.xml
+++ b/log4j2-cube/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>log4j2-cube</artifactId>
 
   <properties>
-    <log4j.version>2.0-beta9</log4j.version>
+    <log4j.version>2.0-rc1</log4j.version>
     <resteasy.version>3.0.6.Final</resteasy.version>
     <guava.version>16.0</guava.version>
     <jackson.version>2.3.1</jackson.version>
