--- a/log4j2-logstash/pom.xml
+++ b/log4j2-logstash/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>log4j2-logstash</artifactId>
 
   <properties>
-    <log4j.version>2.0-beta9</log4j.version>
+    <log4j.version>2.0-rc1</log4j.version>
     <logstash.version>1.2.2</logstash.version>
   </properties>
 
