--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <jackson.version>2.3.1</jackson.version>
+    <jackson.version>2.3.2</jackson.version>
     <swagger.version>1.3.2</swagger.version>
+    <guice.version>4.0-beta4</guice.version>
     <handlebars.version>1.2.1</handlebars.version>
   </properties>
 
@@ -52,7 +53,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>16.0</version>
+        <version>16.0.1</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
@@ -72,12 +73,18 @@
       <dependency>
         <groupId>com.google.inject</groupId>
         <artifactId>guice</artifactId>
-        <version>4.0-beta</version>
+        <version>${guice.version}</version>
+      </dependency>
+      <!-- Used by Jukito -->
+      <dependency>
+        <groupId>com.google.inject.extensions</groupId>
+        <artifactId>guice-assistedinject</artifactId>
+        <version>${guice.version}</version>
       </dependency>
       <dependency>
         <groupId>org.jongo</groupId>
         <artifactId>jongo</artifactId>
-        <version>1.1-early-20140125-0533</version>
+        <version>1.1-early-20140221-1732</version>
       </dependency>
       <dependency>
         <groupId>de.undercouch</groupId>
@@ -87,7 +94,7 @@
       <dependency>
         <groupId>org.mongodb</groupId>
         <artifactId>mongo-java-driver</artifactId>
-        <version>2.11.3</version>
+        <version>2.11.4</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
@@ -99,7 +106,7 @@
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
-        <version>4.0.15.Final</version>
+        <version>4.0.17.Final</version>
       </dependency>
       <dependency>
         <groupId>com.github.jknack</groupId>
@@ -187,7 +194,7 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j</artifactId>
-        <version>2.0-beta9</version>
+        <version>2.0-rc1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -215,7 +222,7 @@
       <dependency>
         <groupId>org.jukito</groupId>
         <artifactId>jukito</artifactId>
-        <version>1.3</version>
+        <version>1.4</version>
         <scope>test</scope>
       </dependency>
       <dependency>
