Manually do a "git submodule update --init" in release:perform
release:perform clones the repo but doesn't initialize submodules, so we
have to initialize them manually, using the exec-maven-plugin, or our
tests will fail downstream, leaving an half-complete release where only
some artifacts have been deployed to the repo.
See http://mail-archives.apache.org/mod_mbox/maven-users/201403.mbox/%3CCAEayHEPXOakH0qsmC0mCCntbZu%3DBNOZ6htiusAjdufq9LH6PCw%40mail.gmail.com%3E

Change-Id: Iecccf55c0c287b8001747849ac20532f44f64e83

--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,14 @@
           <version>2.3</version>
         </plugin>
         <plugin>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5</version>
+          <configuration>
+            <releaseProfiles>release</releaseProfiles>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.codehaus.sonar</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
           <version>3.7</version>
@@ -291,6 +299,34 @@
   </modules>
 
   <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <inherited>false</inherited>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>git</executable>
+                  <arguments>
+                    <argument>submodule</argument>
+                    <argument>update</argument>
+                    <argument>--init</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>error-prone</id>
       <activation>
