Move oasis-puppet into a profile.
We don't actually use it apart from bootstrapping a Vagrant VM, and it
takes time and needs Internet access, making the build fragile.

Change-Id: I3652e6c59160cf975f2bedd3359a52e869a9b745

--- a/pom.xml
+++ b/pom.xml
@@ -293,7 +293,6 @@
     <module>oasis-model</module>
     <module>oasis-webapp</module>
     <module>oasis-dist</module>
-    <module>oasis-puppet</module>
     <module>log4j2-cube</module>
     <module>log4j2-fluentd</module>
     <module>log4j2-logstash</module>
@@ -327,6 +326,12 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>puppet</id>
+      <modules>
+        <module>oasis-puppet</module>
+      </modules>
     </profile>
     <profile>
       <id>error-prone</id>
