Revert "Upgrade to Netty 4.x"
This reverts commit 7ebada4655ac5d773d143e6a8a40050315bdfd3e.

For some reason, resteasy-netty4 sends some duplicate headers (Location
and Set-Cookie), which don't play well with Apache mod_proxy (merging
multiple headers as a single comma-delimited header) and PhantomJS
(%-encoding the space used as separator with the comma, making the
duplicate header value a part of the first value, which then causes errors
when it's part of the query-string and contains duplicate parameters
that we disallow on the OAuth 2.° / OpenID Connect 1.0 side)

Change-Id: If849584814b8b7e6723f783c66b7ecb3e3ac3401

--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -75,7 +75,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-netty4</artifactId>
+      <artifactId>resteasy-netty</artifactId>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
@@ -86,10 +86,6 @@
           <artifactId>resteasy-jackson2-provider</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
     </dependency>
     <dependency>
       <groupId>com.wordnik</groupId>
