--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,8 @@
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
-        <artifactId>netty-all</artifactId>
-        <version>4.0.17.Final</version>
+        <artifactId>netty</artifactId>
+        <version>3.9.0.Final</version>
       </dependency>
       <dependency>
         <groupId>com.github.jknack</groupId>
