Trim down runtime dependencies a bit.
Change-Id: I91baa965b349ceb0add42a5b49043191b7488b3c

--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -18,11 +18,15 @@
       <groupId>com.atolcd.logging.log4j</groupId>
       <artifactId>log4j2-cube</artifactId>
       <version>${project.version}</version>
+      <!-- Never used, but needed at compile-time -->
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.atolcd.logging.log4j</groupId>
       <artifactId>log4j2-fluentd</artifactId>
       <version>${project.version}</version>
+      <!-- Never used, but needed at compile-time -->
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.atolcd.logging.log4j</groupId>
