Revert "Revert "Upgrade to Netty 4.x""
This reverts commit 3270d181c61cb782db95b54ef4d9e6f1e4cb26c3.

We can move back to Netty 4.x now that Resteasy 3.0.8.Final is out with
the needed fixes.
As we're at it, use the latest Netty 4.x to date.

Change-Id: Id7f21a202685dfb23436d2e9a494f654b4085d87

--- a/oasis-webapp/pom.xml
+++ b/oasis-webapp/pom.xml
@@ -91,7 +91,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-netty</artifactId>
+      <artifactId>resteasy-netty4</artifactId>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
@@ -102,6 +102,10 @@
           <artifactId>resteasy-jackson2-provider</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
     </dependency>
     <dependency>
       <groupId>com.wordnik</groupId>
