Validate redirect_uri against a whitelist.
The validation can be turned off to ease integration testing, and for
backwards compatibility. This must only be done on test servers, NEVER
on production servers.

Validation is done by simple string comparison, as suggested by
https://openid.net/specs/openid-connect-registration-1_0.html#ClientMetadata

Change-Id: I331ee4462f62702f2e0c9ad6306d1fd0ff65240f

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -31,6 +31,7 @@ oasis={
     private-key-path=private.key
     public-key-path=public.key
     id-token-duration = 10 minutes
+    disable-redirect-uri-validation = false
   }
   oauth = {
     access-token-duration = 1 hour
