Use Swagger UI as a webjar.
This allows tracking which version we use and makes it easier to update.

File loading changed compared to our version though, requiring us to move
from /swagger-ui.html to /swagger-ui/index.html.

Change-Id: I6c58676c0191dda3dd174dafc3e34cf1e3bee77e

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -85,6 +85,7 @@ ext.libs = [
       },
       'javax.servlet:servlet-api:2.5'
     ],
+  swagger_ui:          'org.webjars:swagger-ui:2.0.17',
 
   args4j:              'args4j:args4j:2.0.28',
 
