--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -24,6 +24,8 @@ dependencies {
   compile libs.slf4j
   runtime libs.log4j_runtime
 
+  runtime libs.swagger_ui
+
   testCompile libs.junit
   testCompile libs.mockito
   testCompile libs.jukito
