Add :oasis-webapp:run task to easily run the webapp from the CLI
System properties are propagated to the application to ease configuration:

 ./gradlew :oasis-webapp:run -Doasis.mongo.uri=mongodb://mongo.example.org/oasis

Change-Id: I8b6638f6fb937238ef0ce26e5cb48d0e79b3dddb

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -33,3 +33,9 @@ dependencies {
 sourceSets.main.resources {
   source sourceSets.main.java
 }
+
+task run(type: JavaExec, dependsOn: classes) {
+  main = 'oasis.web.WebApp'
+  classpath = sourceSets.main.runtimeClasspath
+  systemProperties = System.getProperties()
+}
