Add versionlessOutputs property for even more incremental builds!
Developers can add a gradle.properties file with

    versionlessOutputs=true

or run with

    ./gradlew -PversionlessOutputs=true …

to build JARs that don't contain the version number in their name. That
way, incremental builds can be even more incremental (e.g. amending your
commit can still re-use the JAR from the previous build/commit if code
hasn't changed) and waste less disk space (Gradle never cleans JARs with
older versions unless you call "./gradlew clean", which is kind of an
anti-pattern in a good build tool).

The oasis-dist still is not fully incremental between amends given that
the version is integrated within the produced DEB file, whichever its
name, but at least now it wastes less disk space.

Change-Id: I7a0f5c3c7269f4feb0a6b55a56477aa7d63c2472

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ apply from: './libraries.gradle'
 group = 'fr.pole-numerique.oasis'
 version = 'git describe'.execute(null, rootDir).text.trim() - ~'^v'
 
+ext.versionlessOutputs = project.hasProperty("versionlessOutputs") ? Boolean.parseBoolean(project.property("versionlessOutputs")) : false;
+
 subprojects {
   apply plugin: 'errorprone'
 
@@ -17,6 +19,12 @@ subprojects {
       sourceCompatibility = 1.7
       targetCompatibility = 1.7
       options.encoding = 'UTF-8'
+    }
+
+    if (versionlessOutputs) {
+      tasks.withType(AbstractArchiveTask) {
+        archiveName = "${baseName}.${extension}"
+      }
     }
   }
 }
