Compile Java with "-source 7" for both main and test classes.
Change-Id: Icbd6ad229627253d2e511019c4e42f7b2217cfa5

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,7 @@ subprojects {
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
 
-    compileJava {
-      sourceCompatibility = 1.7
-      targetCompatibility = 1.7
+    tasks.withType(JavaCompile) {
       options.encoding = 'UTF-8'
     }
 
